--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
 </head>
@@ -77,6 +77,6 @@
   </div>
 </body>
 <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-<script type="text/javascript" src="/scripts/tweet-add.js"></script>
+<!-- <script type="text/javascript" src="/scripts/tweet-add.js"></script> -->
 
 </html>
