--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet-log.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/error.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -67,6 +68,8 @@
                 </div>
               </form>
             </div>
+
+            <div id="errorDiv">Test</div>
           </section>
           <section id="tweet-container">
             <!--<h2>Compose Tweet</h2>-->
