remove validation alert and add error text, add avataar with user name

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,8 @@
       <div id="main" class="main">
         <main>
           <section class="new-tweet">
+            <div>
+              <div id="errorDiv"></div>
             <!--<h2>Compose Tweet</h2>-->
             <div class="new-tweet">
               <form action="/tweets/" method="post">
@@ -68,8 +70,7 @@
                 </div>
               </form>
             </div>
-
-            <div id="errorDiv">Test</div>
+          </div>
           </section>
           <section id="tweet-container">
             <!--<h2>Compose Tweet</h2>-->
