Show tweets on first visit to page, move arrow icon at the bottom of the text

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <nav class="logoContainer sticky">
       <div class="logo">
         <div>tweeter</div>
-        <div class="logoText">Write a new tweet<button><i class="fas fa-angle-double-down"></i></button></div>
+        <div class="logoText">Write a new tweet<button class="arrow-btn"><i class="fas fa-angle-double-down"></i></button></div>
       </div>
     </nav>
     <div id="flexDiv">
